Bug 263840 - monthview: calendar inside, category outside: A event without category has a green border.
Summary: monthview: calendar inside, category outside: A event without category has a ...
Status: VERIFIED FIXED
Alias: None
Product: KOrganizer Mobile
Classification: Unmaintained
Component: calendar (other bugs)
Version First Reported In: unspecified
Platform: Windows CE Microsoft Windows CE
: NOR normal
Target Milestone: ---
Assignee: Ludwig Reiter
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-21 11:07 UTC by Ludwig Reiter
Modified: 2011-02-18 11:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ludwig Reiter 2011-01-21 11:07:43 UTC
Version:           unspecified (using Devel) 
OS:                Windows CE

version: 2011-01-18

Reproducible: Always

Steps to Reproduce:
1. Open Calendar Touch
2. Open config dialog.
3. Set monthview display option to calendar inside, category outside.
4. Switch to a calendar folder with event without category.
5. Open the monthview

Actual Results:  
The event has a green border.

Expected Results:  
In this case (no category) not the default category color should be used but (like in dayview) a small var color of the calendar color.
Comment 1 Tobias Koenig 2011-01-21 17:03:27 UTC
Git commit ce58996f7d069d8ca8449f300d47bf2428c7f727 by Tobias Koenig
Pushed by tokoe into branch master

Use UnsetCategoryColor only in 'Category Only' mode

BUG: 263840
CCMAIL: sergio@kdab.com

M  +4    -1    calendarviews/eventviews/agenda/agendaitem.cpp     
M  +4    -1    calendarviews/eventviews/month/monthitem.cpp     

http://commits.kde.org/ee6cc38b/ce58996f7d069d8ca8449f300d47bf2428c7f727
Comment 2 Sergio Martins 2011-01-23 17:36:17 UTC
Git commit 2a2f28bdd516446953483ed6a225eac12639efc1 by Sergio Martins.
Pushed by smartins into branch 'master'.

Don't break "category inside/calendar outside" when fixing "category outside/calendar inside"

Transparent inside looks bad, and isn't consistent with enterprise/e3.

We should fix the description of the "Unset category color" in the config dialog though,
it's not only used for "Category Only" schemes, "Category Inside" schemes use it too.

CCBUG: 263840

M  +6    -2    calendarviews/eventviews/agenda/agendaitem.cpp     
M  +6    -2    calendarviews/eventviews/month/monthitem.cpp     

http://commits.kde.org/ee6cc38b/2a2f28bdd516446953483ed6a225eac12639efc1
Comment 3 Sergio Martins 2011-01-24 11:46:57 UTC
Git commit ab71ff09da3e239d27ed260b30900d79386095db by Sergio Martins.
Pushed by smartins into branch 'master'.

Forwardport month/agenda item color handling from e3 to master.

When there's no category, the "calendar inside/category outside" scheme should use a
color variation of the calendar color ( calendar.dark() ) for the border.

Removed some code duplication between agenda and month view by creating EventView::ItemFrameColor().

CCBUG: 263840

M  +4    -19   calendarviews/eventviews/agenda/agendaitem.cpp     
M  +12   -1    calendarviews/eventviews/eventview.cpp     
M  +6    -0    calendarviews/eventviews/eventview.h     
M  +8    -24   calendarviews/eventviews/month/monthitem.cpp     

http://commits.kde.org/ee6cc38b/ab71ff09da3e239d27ed260b30900d79386095db
Comment 4 Ludwig Reiter 2011-02-18 11:37:23 UTC
Kontact Touch Windows CE 2011-02-11

The borders are right in this version (inner color: red; outside color: darker red)
Verified.