Use UnsetCategoryColor only in 'Category Only' mode

BUG: 263840
CCMAIL: sergio@kdab.com